made comp Search Locate Pin

--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "google-maps-react": "^2.0.6",
     "places-autocomplete-react": "^1.0.10",
     "react": "^17.0.2",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
-    "react-google-autocomplete": "5.3.1",
+    "react-google-autocomplete": "^2.6.1",
     "react-google-maps": "^9.4.5",
     "react-icons": "^4.3.1",
     "react-native-searchable-dropdown": "^1.1.3",
