--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@reach/combobox": "^0.16.5",
     "@react-aria/combobox": "^3.2.3",
@@ -20,7 +22,6 @@
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "google-map-react": "^2.1.10",
-    "google-maps-react": "^2.0.6",
     "places-autocomplete-react": "^1.0.10",
     "react": "^17.0.2",
     "react-cool-onclickoutside": "^1.7.0",
@@ -31,7 +32,7 @@
     "react-icons": "^4.3.1",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-places-autocomplete": "^7.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "use-places-autocomplete": "^1.11.0",
     "web-vitals": "^2.1.4"
   },
