--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-icons": "^4.3.1",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-places-autocomplete": "^7.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^4.0.3",
     "use-places-autocomplete": "^1.11.0",
     "web-vitals": "^2.1.4"
   },
@@ -59,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "path-browserify": "^1.0.1"
   }
 }
